<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">UV Smart</string>
    <string name="find_out_uv_index_today">Find Out UV Index Today</string>
    <string name="get_started">GET STARTED!</string>
    <string name="call_to_action">Living in Victoria, Australia, offers a vibrant lifestyle that nurtures success and the confidence to achieve your dreams. With the increase of international students studying in Victoria, there is a need to raise awareness on how you can protect yourself against the harmful UV radiation to prevent skin damage.\nLearn more about the UI Index Today and Why you need to protect yourself…</string>
    <string name="tips_for_today">TIPS For Today</string>
    <string name="skin_cancer">Get to know about UV and Skin Cancer</string>
    <string name="sun_protection">GET SOME TIPS on sun protection！</string>
    <string name="uv_max">UV max</string>
    <string name="welcome">Welcome to UV Smart</string>
    <string name="timezone">Timezone</string>
    <string name="about_skin_cancer">"About skin cancer\nThe sun's ultraviolet (UV) radiation is the main cause of skin cancer. Each time your skin is damaged by UV, changes take place in the structure and function of the skin cells. If UV damage keeps adding up, skin cells become less able to repair, increasing the risk of skin cancer."</string>
    <string name="in_australia">"In Australia\n- Two in three Australians will be diagnosed with skin cancer by age of 70.\n- About 2000 Australians die from skin cancer each year.\n- Australia has one of the highest rates of skin cancer in the world."</string>
    <string name="why">"A major factor is geography – that is proximity to the equator (the line on the globe that gets the greatest amount of sun). Generally speaking, the closer to the equator someone lives, the greater the amount and intensity of sun exposure they receive. That gradient is seen in a comparison of skin cancer rates across Australian states with Queensland reporting much higher rates than New South Wales, which is in turn higher than Victoria.Another is the earth’s elliptical orbit around the sun. The planet is about 1.7% closer to the sun in January, during the southern summer, and 1.7% further away in July – northern summer. So that means when the sun is strongest the southern hemisphere is 3.4% closer to the sun than the north is during their summer. This increases UV by about 7%.Add to that the lower pollution levels and clearer air in the southern hemisphere – due largely to much lower population densities – resulting in UV levels about 7% higher than in the northern hemisphere.\nTaking all these factors together, southern hemisphere locations receive about 15% more UV radiation than the equivalent northern latitude location in any given year."</string>
    <string name="step1">1. Examine your face\nEspecially your nose, lips, mouth and ears — front and back. Use one or both mirrors to get a clear view.</string>
    <string name="step2">2. Inspect your scalp\nThoroughly inspect your scalp, using a blow-dryer and mirror to expose each section to view. Get a friend or family member to help, if you can.</string>
    <string name="step3">3. Check your hands\nPalms and backs, between the fingers and under the fingernails. Continue up the wrists to examine both the front and back of your forearms.</string>
    <string name="step4">4. Scan your arms\nStanding in front of the full-length mirror, begin at the elbows and scan all sides of your upper arms. Don’t forget the underarms.</string>
    <string name="uv3">"Low UV (0~3): \n- You can safely stay outside! A UV Index reading of 0 to 2 means low danger from the sun's UV rays for the average person.\n- Wear sunglasses on bright days.\nIf you burn easily, cover up and use broad spectrum SPF 30+ sunscreen.\n- Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure."</string>
    <string name="self_exams_save_lives">Self Exams Save Lives</string>
    <string name="how_to_do_a_skin_check">How to Do a Skin Check</string>
</resources>

