<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        />
            <TextView
                android:id="@+id/about_skin_cancer"
                android:layout_width="357dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/about_skin_cancer"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:layout_width="357dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/in_australia"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:layout_width="357dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/why"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.anychart.AnyChartView
                android:id="@+id/any_chart_view2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/any_chart_view"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>